syntax = "proto3";

package ai.metathings.service.identityd2;

import "model.proto";

message ListActionsRequest {
	OpAction action = 1;
}

message ListActionsResponse {
	repeated Action actions = 1;
}
